build_core_5.txt
   Compiling dissimilar v1.0.10
   Compiling deve_core v0.0.1 (E:\gitclone\Deve-Note\crates\core)
warning: unused import: `file_id::FileId`
 --> crates\core\src\vfs.rs:6:5
  |
6 | use file_id::FileId;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `anyhow::Result`
 --> crates\core\src\state.rs:2:5
  |
2 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^

error[E0599]: no method named `value` found for enum `Result<T, E>` in the current scope
   --> crates\core\src\ledger.rs:151:31
    |
151 |             let seq_val = seq.value();
    |                               ^^^^^ method not found in `Result<AccessGuard<'_, u64>, StorageError>`
    |
note: the method `value` exists on the type `AccessGuard<'_, u64>`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redb-2.6.3\src\tree_store\btree_base.rs:227:5
    |
227 |     pub fn value(&self) -> V::SelfType<'_> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: use the `?` operator to extract the `AccessGuard<'_, u64>` value, propagating a `Result::Err` value to the caller
    |
151 |             let seq_val = seq?.value();
    |                              +

error[E0308]: mismatched types
  --> crates\core\src\state.rs:25:40
   |
25 |                     content.drain(pos..end);
   |                                        ^^^ expected `&usize`, found `usize`
   |
help: consider borrowing here
   |
25 |                     content.drain(pos..&end);
   |                                        +

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `deve_core` (lib) generated 2 warnings
error: could not compile `deve_core` (lib) due to 2 previous errors; 2 warnings emitted
